feat(core): garbage collector preset on instances
GcPreset in instances::model with lowercase snake tokens, Display/FromStr,
all/label/description, and flags(major) for the ZGC split on Java 21 and 22.
InstanceJvm.gc defaults to Default and writes no key. config.jvm.gc seeds a
new instance through Instances::with_gc_default, set by Launcher::instances().

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>